src/test/ui/parser/trait-object-lifetime-parens.stderr
error: parenthesized lifetime bounds are not supported
  --> $DIR/trait-object-lifetime-parens.rs:7:21
   |
LL | fn f<'a, T: Trait + ('a)>() {}
   |                     ^^^^ help: remove the parentheses

error: parenthesized lifetime bounds are not supported
  --> $DIR/trait-object-lifetime-parens.rs:10:24
   |
LL |     let _: Box<Trait + ('a)>;
   |                        ^^^^ help: remove the parentheses

error: expected `:`, found `)`
  --> $DIR/trait-object-lifetime-parens.rs:11:19
   |
LL |     let _: Box<('a) + Trait>;
   |                   ^ expected `:`

error: chained comparison operators require parentheses
  --> $DIR/trait-object-lifetime-parens.rs:11:15
   |
LL |     let _: Box<('a) + Trait>;
   |               ^^^^^^^^^^^^^^^
   |
   = help: use `::<...>` instead of `<...>` if you meant to specify type arguments
   = help: or use `(...)` if you meant to specify fn arguments

error: expected type, found `'a`
  --> $DIR/trait-object-lifetime-parens.rs:11:17
   |
LL |     let _: Box<('a) + Trait>;
   |         -       ^^
   |         |
   |         while parsing the type for `_`

error: aborting due to 5 previous errors

